--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,6 @@
     "require": {
         "php": ">=5.3.0",
         "composer/installers": "*",
-        "raven/raven": "dev-master"
+        "raven/raven": "*@dev"
     }
 }
